pod-security-114/restricted/restrict-volume-types/e2e/enforce-policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-volume-types
spec:
  validationActions: [Deny]
status:
  conditionStatus:
    ready: true
